@@ -1,5 +1,6 @@
 4.1
  * Add information whether sstables are dropped to SchemaChangeListener (CASSANDRA-17582)
+ * Fix a race condition where a keyspace can be oopened while it is being removed (CASSANDRA-17658)
 
 4.0.8
  * Connect to listen address when own broadcast address is requested (CASSANDRA-18200)
